Add findbugs linter to build and fix warnings
- Selecting quit option now closes window rather than calling System.exit.
This requires not holding onto other frames after they are closed. Also,
made preferences window and marker list modal.